# stoa-clone

./: .gitignore  AGENTS.md  Makefile  Procfile.dev  README.md  prek.toml  pyproject.toml
.codex/: config.toml
.codex/hooks/: format_after_edit.py
.github/workflows/: ci.yml
app/: container.py  main.py
app/api/: dependencies.py  event_schemas.py  events.py  files.py  notes.py  schemas.py  sessions.py
app/domain/: events.py  models.py  ports.py  services.py
app/infra/: event_publisher.py  fake_agent_runtime.py  fake_prompt_suggestions.py  fake_runtime.py  git_runtime.py  git_workspace_review.py  in_memory.py  json_store.py  local_agent_runtime.py  pi_rpc_agent_runtime.py  websocket_broadcaster.py
docs/: product-vision.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
openapi/: openapi.json  session-event.schema.json
scripts/: export_openapi.py  export_session_events_schema.py  issue_check.py
tests/: conftest.py  test_container.py
tests/api/: test_agent_output_api.py  test_agent_prompt_api.py  test_agent_runtime_events_websocket.py  test_chat_api.py  test_control_events_websocket.py  test_control_released_events_websocket.py  test_events_websocket.py  test_file_editing_api.py  test_file_editing_events_api.py  test_hidden_paths_api.py  test_join_session_api.py  test_notes_api.py  test_notes_events_websocket.py  test_notes_list_api.py  test_presence_api.py  test_prompt_suggestions_api.py  test_session_event_schemas.py  test_session_events_api.py  test_session_failures_api.py  (+8 more)
(+36 files in other folders)
