[project]
name = "multiplayer-agent"
version = "0.1.0"
description = "Minimal backend shell for a multiplayer agent session app"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "markdown>=3.6",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "prek>=0.3.10",
  "pytest>=8.0.0",
  "pytest-watch>=4.2.0",
  "ruff>=0.15.12",
  "ty>=0.0.32",
  "uvicorn>=0.44.0",
  "websockets>=15.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
  # FastAPI uses dependency calls in default argument positions.
  "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.11"
root = ["."]

[tool.ty.src]
include = ["app", "tests", "scripts"]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
